# QuadCalculator

./: .gitignore  CMakeLists.txt  LICENSE  QuadCalculator.sln  README.md
QuadCalculator/: QuadCalculator.vcxproj  QuadCalculator.vcxproj.filters
QuadCalculator/includes/: ColorMod.h  Complex.h  Generals.h  PPrintter.cpp  PPrintter.h
QuadCalculator/src/: QuadCalculator.cpp  file.txt
